fix mobile white space

--- a/null/src/components/css/Splash.css
+++ b/null/src/components/css/Splash.css
@@ -14,6 +14,7 @@
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 }
 
@@ -28,6 +29,7 @@ html,body {
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .splash {
